show correct cursor when hovering the remote bar when it's visible

--- a/static/less/settings.less
+++ b/static/less/settings.less
@@ -29,7 +29,7 @@
   &#remote_bar.on,
   &.active {
     opacity: 1;
-    cursor: pointer;
+    cursor: default;
   }
 
   &:hover {
